# pypi2nix

./: .envrc  .gitignore  .travis.yml  MANIFEST.in  conftest.py  constraints.txt  default.nix  flake.nix  requirements-dev.txt  requirements.nix  requirements.txt  requirements_frozen.txt  requirements_override.nix  setup.cfg  shell.nix
integrationtests/: framework.py  test_fava.py
integrationtests/framework/: __init__.py  format_tester.py
pypi2nix/: code_formatter.py  expression_renderer.py  main.py  network_file.py  path.py  requirements.py  utils.py
pypi2nix/templates/: flake.nix.j2  generated.nix.j2  requirements.nix.j2
scripts/: build_wheel.py  deploy_to_pypi.py  format_sources.py  install_test.py  package_source.py  prepare_test_data.py  run_integration_tests.py  update_dependencies.py  update_python_packages.py
source/: conf.py  development.rst
src/pypi2nix/: expression_renderer.py  hash.py  main.py  nix.py  package_source.py  stage1.py  utils.py
src/pypi2nix/package/: setupcfg.py
unittests/: package_generator.py  test_flake_renderer.py  test_nix.py  test_package_generator.py  test_package_source.py  test_path.py  test_requirement_collector.py  test_util_cmd.py  test_wheel_builder.py
unittests/data/: setupcfg_package-1.0-py3-none-any.whl
unittests/templates/: setup.cfg
