[metadata]
name = {{ name }}
version = {{ version }}
url = https://example.test
author = "Test Author"
author_email = "testauthor@example.test"

[options]
{% if install_requires %}
install_requires = {% for requirement in install_requires %}
    {{ requirement }}
{% endfor %}
{% endif %}

[options.extras_require]
{% if extras_require %}
{% for extra_name, extra_requirements in extras_require.items() %}
{{ extra_name }} = {% for requirement in extra_requirements %}
    {{ requirement }}
{% endfor %}
{% endfor %}
{% endif %}